--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="refresh" content="0; url=/admin/login" />
-  <title>EA License Manager</title>
+  <title>AlgoLicense - Admin</title>
+  <link rel="icon" type="image/png" href="/assets/images/logo-favicon.png" />
   <style>
     * {
       margin: 0;
